fix a syntax error

--- a/video/templates/video/video.html
+++ b/video/templates/video/video.html
@@ -84,7 +84,7 @@
     </div>
 </body>
 
-<script src="{% static 'js/bootstrap.min.js'"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script type="text/javascript" src="http://player.youku.com/jsapi"></script>
 <script type="text/javascript">
 player = new YKU.Player('youkuplayer',{
