--- a/video/templates/video_detail.html
+++ b/video/templates/video_detail.html
@@ -2,8 +2,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>love makeup</title>
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <title>love makeup video page</title>
+    <!--<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">-->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 <body>
     <nav class="navbar navbar-default">
@@ -64,20 +65,21 @@
         <div class="row clearfix">
             <div class="col-md-2 column">
             </div>
+
             <div class="col-md-8 column">
                 <div class="row">
-                    <div id="youkuplayer" style="width:783px;height:500px"></div>
-                </div>
-                <br />
-                <div class="row">
-                  <div class="panel panel-default">
-                    <div class="panel-heading">Panel heading without title</div>
-                    <div class="panel-body">
-                      Panel content
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h2 width="20%">作者：{{ video.owner }}</h2>
+                        </div>
+
+                        <div class="panel-body">
+                            <div id="youkuplayer" style="width:783px;height:500px"></div>
+                        </div>
                     </div>
-                  </div>
                 </div>
             </div>
+
             <div class="col-md-2 column">
             </div>
         </div>
