--- a/video/templates/video_list.html
+++ b/video/templates/video_list.html
@@ -3,7 +3,8 @@
 <head>
     <title>love makeup</title>
     {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <!--<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">-->
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 <body>
     <nav class="navbar navbar-default">
@@ -63,58 +64,25 @@
         <div class="row clearfix">
             <div class="col-md-9 column">
                 <div class="row">
-                    <div class="col-xs-6 col-md-4">
-                        <a href="#" class="thumbnail">
-                            <img src="{% static '1150980500.jpg' %}" alt="...">
-                        </a>
-                    </div>
-                    <div class="col-xs-6 col-md-4">
-                        <a href="#" class="thumbnail">
-                            <img src="{% static '1150980500.jpg' %}" alt="...">
-                        </a>
-                    </div>
-                    <div class="col-xs-6 col-md-4">
-                        <a href="#" class="thumbnail">
-                            <img src="{% static '1150980500.jpg' %}" alt="...">
-                        </a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="{% static '1150980500.jpg' %}" alt="...">
-                            <div class="caption">
-                                <h3>Thumbnail label</h3>
-                                <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+                    <div class="panel panel-default">
+                    {% for video in videos %}
+                        <!--{{ '<tr>'|safe if loop.index0 %3 == 0 }}-->
+                        <div class="col-sm-6 col-md-4">
+                            <div class="panel-heading">
+                                <h3 href="{% url 'video_detail' video.id %}">{{ video.title }}</h3>
+                            </div>
+
+                            <div class="panel-body">
+                              <div class="thumbnail">
+                                <img src="{% static '1150980500.jpg' %}" alt="...">
+                                <div class="caption">
+                                    <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
+                                </div>
+                              </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="{% static '1150980500.jpg' %}" alt="...">
-                            <div class="caption">
-                                <h3>Thumbnail label</h3>
-                                <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="{% static '1150980500.jpg' %}" alt="...">
-                            <div class="caption">
-                                <h3>Thumbnail label</h3>
-                                <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="thumbnail">
-                            <img src="{% static '1150980500.jpg' %}" alt="...">
-                            <div class="caption">
-                                <h3>Thumbnail label</h3>
-                                <p><a href="#" class="btn btn-primary" role="button">Button</a></p>
-                            </div>
-                        </div>
+                        <!--{{ '</tr>'|safe if loop.index0 %3 ==0 }}-->
+                    {% endfor %}
                     </div>
                 </div>
                 <ul class="pagination pagination-sm">
