add AngularJS lib

--- a/video/templates/video/video_detail.html
+++ b/video/templates/video/video_detail.html
@@ -1,111 +1,4 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>love makeup video page</title>
-    <!--<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">-->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-</head>
-<body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Brand</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-          <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Link</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-
-    <div class="container">
-        <div class="row clearfix">
-            <div class="col-md-2 column">
-            </div>
-
-            <div class="col-md-8 column">
-                <div class="row">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <h2 width="20%">作者：{{ video.owner }}</h2>
-                        </div>
-
-                        <div class="panel-body">
-                            <div id="youkuplayer" style="width:783px;height:500px"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-2 column">
-            </div>
-        </div>
-    </div>
-</body>
-
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script type="text/javascript" src="http://player.youku.com/jsapi"></script>
-<script type="text/javascript">
-player = new YKU.Player('youkuplayer',{
-styleid: '0',
-client_id: 'b1b8d127374e42ee',
-vid: 'XNDcwMDc3MTk2',
-newPlayer: true
-});
-function playVideo(){
-player.playVideo();
-}
-function pauseVideo(){
-player.pauseVideo();
-}
-function seekTo(s){
-player.seekTo(s);
-}
-function currentTime(){
-return player.currentTime();
-}
-</script>
-</html>
+<p>author: {{ video.auther }}</p>
+<p>title: {{ video.title }}</p>
+<p>content: {{ video.content }}</p>
+<p>create time: {{ video.create_timestamp }}</p>
