--- a/video/templates/index.html
+++ b/video/templates/index.html
@@ -17,7 +17,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Brand</a>
+          <a class="navbar-brand" ng-href="/#/">Brand</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,18 +25,6 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
             <li><a href="#">Link</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
           </ul>
           <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
@@ -46,16 +34,6 @@
           </form>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#">Link</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -64,6 +42,29 @@
     <div class="container">
         <div class="row clearfix">
             <div ng-view></div>
+            <div class="col-md-3 column">
+                <div class="panel panel-default" ng-controller="categoryCtrl">
+                    <div class="panel-body">
+                            <ul class="list-group">
+                              <a class="list-group-item" ng-repeat="c in categoryLists" ng-href="/#/c/[[ c.category_name ]]">
+                                <span class="badge">[[ c.video_num ]]</span>
+                                [[ c.category_name ]]
+                              </a>
+                            </ul>
+                    </div>
+                </div>
+                <div class="panel panel-default" ng-controller="videoRankCtrl">
+                    <div class="panel-body">
+                        <ul class="list-group">
+                          <a class="list-group-item" ng-repeat="v in videoRankLists" ng-href="/#/[[ v.av_id ]]">
+                            <span class="badge">[[ v.click_num ]]</span>
+                            [[ v.title ]]
+                          </a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
@@ -72,4 +73,5 @@
 <script src="{% static 'js/lib/angular.js' %}"></script>
 <script src="{% static 'js/lib/angular-route.js' %}"></script>
 <script src="{% static 'js/app.js' %}"></script>
+<script src="{% static 'js/controllers.js' %}"></script>
 </html>
