--- a/video/templates/video/video_detail.html
+++ b/video/templates/video/video_detail.html
@@ -1,4 +1,15 @@
-<p>author: {{ video.auther }}</p>
-<p>title: {{ video.title }}</p>
-<p>content: {{ video.content }}</p>
-<p>create time: {{ video.create_timestamp }}</p>
+<div class="col-md-9 column">
+
+    <div class="row">
+        <div id="youkuplayer" style="width:783px;height:500px;background:red"></div>
+    </div>
+    <br />
+    <div class="row">
+      <div class="panel panel-default">
+        <div class="panel-heading">Panel heading without title</div>
+        <div class="panel-body">
+          Panel content
+        </div>
+      </div>
+    </div>
+</div>
